Fix footer behavior on small screens (>450px width)

--- a/src/assets/scss/theme.scss
+++ b/src/assets/scss/theme.scss
@@ -220,10 +220,11 @@ footer.footer {
 
         .items {
             display: flex;
-            justify-content: flex-start;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            column-gap: 10px;
 
             li {
-                padding: 0 45px 0 0;
                 margin: 10px 0;
 
                 a {
